# session-glue

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
claude-skills/session-glue/: SKILL.md
codex-skills/session-glue/: SKILL.md
codex-skills/session-glue/references/: protocol.md
docs/: PROPOSAL-session-glue.md  agent-surfaces.md  quadwork-batch-1.md  quadwork-batch-2.md  quadwork-batch-3.md
docs/tickets/: 00-epic-session-glue-mvp.md  01-package-scaffold.md  02-schema-fixtures.md  03-glue-create.md  04-glue-validate.md  05-status-resume-prompt.md  06-installer-dry-run.md  07-codex-skill-wrapper.md  08-dogfood-cross-agent.md  09-release-packaging-pypi-gate.md
session_glue/: __init__.py  __main__.py  cli.py  gitcheck.py  installer.py  leakscan.py  reader.py  schema.py  skills.py  validator.py  writer.py
session_glue/assets/: __init__.py
session_glue/assets/skills/claude/session-glue/: SKILL.md
session_glue/assets/skills/claude/session-glue/references/: protocol.md
session_glue/assets/skills/codex/session-glue/: SKILL.md
session_glue/assets/skills/codex/session-glue/agents/: openai.yaml
session_glue/assets/skills/codex/session-glue/references/: protocol.md
tests/: test_claude_skill.py  test_cli.py  test_codex_skill.py  test_gitcheck.py  test_installer.py  test_leakscan.py  test_package_assets.py  test_reader.py  test_schema.py  test_skills.py  test_validator.py  test_writer.py
tests/fixtures/handoffs/: INDEX.yaml  invalid_missing_field.md  invalid_next_action.md  valid.md
tests/fixtures/installer/: with_block.md  without_block.md
