[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "session-glue"
dynamic = ["version"]
description = "A zero-daemon, repo-local session-continuity protocol and CLI for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Session Glue" }]
keywords = ["agent", "handoff", "session", "continuity", "cli", "memory", "codex", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
# No required runtime dependencies in v1: the CLI is intentionally stdlib-only
# so it can be trusted and installed immediately.
dependencies = []

[project.urls]
Homepage = "https://github.com/realproject7/session-glue"
Repository = "https://github.com/realproject7/session-glue"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    # Build frontend + backend so the packaging tests can build and inspect the
    # wheel/sdist locally without network isolation.
    "build>=1",
    "hatchling",
]

[project.scripts]
glue = "session_glue.cli:main"
session-glue = "session_glue.cli:main"

[tool.hatch.version]
path = "session_glue/__init__.py"

# The wheel ships the whole ``session_glue`` package, including the bundled
# skill assets under ``session_glue/assets/`` (Codex/Claude templates + the
# shared fallback protocol). Because those assets live inside the package, they
# are carried as package data automatically; keep them here (not in a separate
# data dir) so a PyPI install can read them via importlib.resources without the
# source checkout. ``artifacts`` guarantees they ship even if a future ignore
# rule would otherwise exclude them.
[tool.hatch.build.targets.wheel]
packages = ["session_glue"]
artifacts = ["session_glue/assets/**"]

[tool.hatch.build.targets.sdist]
# Preserve hatchling's default VCS file selection (which already vendors the
# assets) and pin them explicitly so the sdist can never drop them.
artifacts = ["session_glue/assets/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
